--- a/Objekt_Helfer.ipynb
+++ b/Objekt_Helfer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,10 @@
     "import matplotlib.dates as mdates\n",
     "from datetime import datetime, timedelta\n",
     "import calendar\n",
-    "from matplotlib.patches import Ellipse\n"
+    "from matplotlib.patches import Ellipse\n",
+    "\n",
+    "\n",
+    "#TEST TEST"
    ]
   },
   {
