New Objekt_Helper.ipynb -- Improved loop
Loop with batch query, filtering with messier objects and NGC duplicates as well as No Data samples

--- a/Objekt_Helfer.ipynb
+++ b/Objekt_Helfer.ipynb
@@ -181,26 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\1939632505.py:2: DeprecationWarning: The notation 'flux(V)' is deprecated since 0.4.8 in favor of 'V'. You will see the column appearing with its new name in the output. See section on filters in https://astroquery.readthedocs.io/en/latest/simbad/simbad_evolution.html to see the new ways to interact with SIMBAD's fluxes.\n",
-      "  custom_simbad.add_votable_fields('ra', 'dec',\"flux(V)\", \"dim_majaxis\", \"dim_minaxis\")\n",
-      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\1939632505.py:2: DeprecationWarning: 'dim_majaxis' has been renamed 'galdim_majaxis'. You'll see it appearing with its new name in the output table\n",
-      "  custom_simbad.add_votable_fields('ra', 'dec',\"flux(V)\", \"dim_majaxis\", \"dim_minaxis\")\n",
-      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\1939632505.py:2: DeprecationWarning: 'dim_minaxis' has been renamed 'galdim_min_axis'. You'll see it appearing with its new name in the output table\n",
-      "  custom_simbad.add_votable_fields('ra', 'dec',\"flux(V)\", \"dim_majaxis\", \"dim_minaxis\")\n",
-      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\1939632505.py:35: UserWarning: Input line 1 contained no data and will not be counted towards `max_rows=50000`.  This differs from the behaviour in NumPy <=1.22 which counted lines rather than rows.  If desired, the previous behaviour can be achieved by using `itertools.islice`.\n",
+      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\2536787282.py:74: UserWarning: Input line 1 contained no data and will not be counted towards `max_rows=50000`.  This differs from the behaviour in NumPy <=1.22 which counted lines rather than rows.  If desired, the previous behaviour can be achieved by using `itertools.islice`.\n",
       "Please see the 1.23 release notes for an example on how to do this.  If you wish to ignore this warning, use `warnings.filterwarnings`.  This warning is expected to be removed in the future and is given only once per `loadtxt` call.\n",
       "  messier_arr = np.loadtxt(\"Messier.txt\",dtype=str)\n",
-      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\1939632505.py:36: UserWarning: Input line 1 contained no data and will not be counted towards `max_rows=50000`.  This differs from the behaviour in NumPy <=1.22 which counted lines rather than rows.  If desired, the previous behaviour can be achieved by using `itertools.islice`.\n",
+      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\2536787282.py:75: UserWarning: Input line 1 contained no data and will not be counted towards `max_rows=50000`.  This differs from the behaviour in NumPy <=1.22 which counted lines rather than rows.  If desired, the previous behaviour can be achieved by using `itertools.islice`.\n",
       "Please see the 1.23 release notes for an example on how to do this.  If you wish to ignore this warning, use `warnings.filterwarnings`.  This warning is expected to be removed in the future and is given only once per `loadtxt` call.\n",
       "  NGC_arr = np.loadtxt(\"NGC.txt\",dtype=str)\n",
-      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\1939632505.py:37: UserWarning: Input line 1 contained no data and will not be counted towards `max_rows=50000`.  This differs from the behaviour in NumPy <=1.22 which counted lines rather than rows.  If desired, the previous behaviour can be achieved by using `itertools.islice`.\n",
+      "C:\\Users\\doria\\AppData\\Local\\Temp\\ipykernel_9500\\2536787282.py:76: UserWarning: Input line 1 contained no data and will not be counted towards `max_rows=50000`.  This differs from the behaviour in NumPy <=1.22 which counted lines rather than rows.  If desired, the previous behaviour can be achieved by using `itertools.islice`.\n",
       "Please see the 1.23 release notes for an example on how to do this.  If you wish to ignore this warning, use `warnings.filterwarnings`.  This warning is expected to be removed in the future and is given only once per `loadtxt` call.\n",
       "  IC_arr = np.loadtxt(\"IC.txt\",dtype=str)\n"
      ]
@@ -212,10 +206,34 @@
     "\n",
     "# Configure Simbad query to include required fields\n",
     "custom_simbad = Simbad()\n",
-    "custom_simbad.add_votable_fields('ra', 'dec', 'dim')\n",
+    "custom_simbad.add_votable_fields('main_id', 'ra', 'dec', 'V', 'dim', \"ids\")\n",
     "\n",
-    "def Simbad_extraction(objects, batch_size=50):\n",
-    "    \"\"\"Batch query SIMBAD for RA, DEC, V-band magnitude, matched ID and galaxy dimensions.\"\"\"\n",
+    "def extract_messier_name(object_ids):\n",
+    "    \"\"\"Check if an object's ID list contains a Messier name.\"\"\"\n",
+    "    if object_ids is None:\n",
+    "        return None  # No IDs available\n",
+    "\n",
+    "    for id_str in object_ids.split('|'):  # SIMBAD separates IDs with '|'\n",
+    "        id_str = id_str.strip()\n",
+    "        if id_str.startswith(\"Messier\") or id_str.startswith(\"M \"):\n",
+    "            return id_str  # Return the first found Messier name\n",
+    "    \n",
+    "    return None\n",
+    "\n",
+    "def extract_NGC_name(object_ids):\n",
+    "    \"\"\"Check if an object's ID list contains a Messier name.\"\"\"\n",
+    "    if object_ids is None:\n",
+    "        return None  # No IDs available\n",
+    "\n",
+    "    for id_str in object_ids.split('|'):  # SIMBAD separates IDs with '|'\n",
+    "        id_str = id_str.strip()\n",
+    "        if id_str.startswith(\"NGC\"):\n",
+    "            return id_str.replace(\" \", \"\")  # Return the first found NGC name\n",
+    "    \n",
+    "    return None\n",
+    "\n",
+    "def Simbad_extraction(objects, batch_size=200):\n",
+    "    \"\"\"Batch query SIMBAD for RA, DEC and galaxy dimensions, filtered with Messier objects.\"\"\"\n",
     "    data = []\n",
     "\n",
     "    for i in range(0, len(objects), batch_size):\n",
@@ -231,21 +249,29 @@
     "                # Extract RA and DEC\n",
     "                ra_values = result_table['ra'][j]\n",
     "                dec_values = result_table['dec'][j]\n",
+    "\n",
+    "                magnitude = result_table[\"V\"][j] if \"V\" in result_table.colnames else None\n",
     "                \n",
     "                # Extract galaxy dimensions (major/minor axis)\n",
     "                major_axis = result_table[\"galdim_majaxis\"][j] if \"galdim_majaxis\" in result_table.colnames else None\n",
     "                minor_axis = result_table[\"galdim_minaxis\"][j] if \"galdim_minaxis\" in result_table.colnames else None\n",
     "\n",
-    "                # matched_ID = result_table[\"matched_id\"] if \"matched_id\" in result_table.colnames else None\n",
+    "                matched_ID = result_table[\"ids\"][j] if \"ids\" in result_table.colnames else None\n",
+    "                messier_name = extract_messier_name(matched_ID)\n",
+    "                NGC_name = extract_NGC_name(matched_ID)\n",
     "                \n",
+    "                if NGC_name != obj:\n",
+    "                    continue\n",
+    "                if messier_name:\n",
+    "                    continue\n",
+    "\n",
     "                # Append only if all values exist\n",
-    "                data.append((main_ID, ra_values, dec_values, major_axis, minor_axis)) #, matched_ID))\n",
+    "                data.append((obj, ra_values, dec_values, magnitude, major_axis, minor_axis))\n",
     "\n",
     "            except Exception as e:\n",
     "                print(f\"Error processing {obj}: {e}\")\n",
     "\n",
     "    return np.array(data, dtype=object)\n",
-    "\n",
     "\n",
     "\n",
     "messier_arr = np.loadtxt(\"Messier.txt\",dtype=str)\n",
@@ -309,12 +335,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Alltitude maximal if ra_deg = ERA + Lambda\n",
     "\n",
     "def min_zenith_distance(dec_deg):\n",
