Update the from datetime import datetime,timedelta

--- a/Objekt_Helfer.ipynb
+++ b/Objekt_Helfer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
     "from matplotlib.ticker import FixedLocator\n",
     "from matplotlib.lines import Line2D\n",
     "from matplotlib.collections import LineCollection\n",
-    "import datetime\n",
-    "from datetime import timedelta\n",
+    "# import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "from multiprocessing import Pool\n",
     "from scipy.interpolate import griddata\n",
     "import pytz\n",
