Major update with combined functions. This makes it usable with two functions.

--- a/Objekt_Helfer.ipynb
+++ b/Objekt_Helfer.ipynb
@@ -69,7 +69,9 @@
     "\"\"\"\n",
     "\n",
     "def getStarted():\n",
-    "    print(WelcomeMessage)"
+    "    print(WelcomeMessage)\n",
+    "\n",
+    "getStarted()"
    ]
   },
   {
@@ -95,7 +97,9 @@
     "    m : float, Minutes\n",
     "    s : float, Seconds\n",
     "    \n",
-    "    :return (float) degrees: d:m:s in decimal degrees\"\"\"\n",
+    "    Returns\n",
+    "    ----------\n",
+    "    degrees : float, d:m:s in decimal degrees\"\"\"\n",
     "    if d == 0:\n",
     "        degrees =(np.abs(d) + m/60 + s/3600)\n",
     "    else:\n",
@@ -183,7 +187,38 @@
     "    degrees : float, Converted angle\n",
     "    \"\"\"\n",
     "    degrees = rad * 180/np.pi\n",
-    "    return degrees"
+    "    return degrees\n",
+    "\n",
+    "\n",
+    "def Surface_Brightness(objects: np.ndarray):\n",
+    "    results = []\n",
+    "    \n",
+    "    for n in range(len(objects)):\n",
+    "        try:\n",
+    "            magnitude = objects[n, 3]\n",
+    "            if magnitude == \"--\":\n",
+    "                results.append(None)\n",
+    "                continue\n",
+    "            \n",
+    "            major_axis, minor_axis = objects[n, 4], objects[n, 5]\n",
+    "            if major_axis == \"--\" or minor_axis == \"--\":\n",
+    "                results.append(None)\n",
+    "                continue\n",
+    "            \n",
+    "            # Calculate area\n",
+    "            Area = np.pi * (float(major_axis) / 2) * (float(minor_axis) / 2)\n",
+    "\n",
+    "            # Compute Surface Brightness\n",
+    "            Surface_Brightness = float(magnitude) + 2.5 * np.log10(Area)\n",
+    "            results.append(Surface_Brightness)\n",
+    "\n",
+    "        except (ValueError, TypeError, Exception) as e:\n",
+    "            print(f\"Error processing row {n}: {e}\")\n",
+    "            results.append(None)\n",
+    "\n",
+    "    data_arr_Sb = np.column_stack((objects, results))\n",
+    "\n",
+    "    return data_arr_Sb"
    ]
   },
   {
@@ -279,7 +314,7 @@
     "Lat = dms_to_deg(d_2,m_2,s_2)\n",
     "ele = 281 # Elevation of the observatory in metres, standard value is the Dr. Karl Remeis Observatory in Bamberg (FAU)\n",
     "\n",
-    "selected_date = \"2025-03-07\"\n",
+    "selected_date = \"2025-03-08\"\n",
     "timezone = \"Europe/Berlin\""
    ]
   },
@@ -472,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Only_Galaxies = 1\n",
+    "# Only_Galaxies = 1\n",
     "\n",
     "def Galaxies(Objects):\n",
     "    \"\"\"\n",
@@ -496,10 +531,10 @@
     "\n",
     "    return Objects_gal, Objects_not_gal\n",
     "\n",
-    "if Only_Galaxies == 1:\n",
-    "    data_arr_2 = Galaxies(data_arr)[0]\n",
-    "else:\n",
-    "    data_arr_2 = np.vstack((messier_arr,NGC_arr,IC_arr))"
+    "# if Only_Galaxies == 1:\n",
+    "#     data_arr_2 = Galaxies(data_arr)[0]\n",
+    "# else:\n",
+    "#     data_arr_2 = np.vstack((messier_arr,NGC_arr,IC_arr))"
    ]
   },
   {
@@ -514,7 +549,7 @@
     "y_ax = 3456\n",
     "Dia = np.sqrt((x_ax)**2+(y_ax)**2)\n",
     "\n",
-    "def TelescopeData(FocalLength: float, PixelSize: int, x_Pixels: int, y_Pixels: int):\n",
+    "def TelescopeData(FocalLength: float = 750, PixelSize: int = 4.30, x_Pixels: int = 5184, y_Pixels: int = 3456):\n",
     "    \"\"\"\n",
     "    This function takes your telescope data and saves it as a global variable. To omit using this function you can just declare the following variables:\n",
     "    ```\n",
@@ -568,7 +603,7 @@
     "    except ValueError:\n",
     "        return np.nan\n",
     "\n",
-    "def ratio(object_arr: np.ndarray, min_frac: float) -> np.ndarray:\n",
+    "def ratio(object_arr: np.ndarray, min_frac: float = 0.08, Remove_NaN: bool = 1) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    This function filters the array with objects with respect to their ratio to the diagonal of the FOV. If the major or the minor axis of an object are larger than the set hurdle (standard is `0.1*x_FOV` and `0.1*y_FOV` respectively) they are left in the array, else they are filtered out.\n",
     "\n",
@@ -585,21 +620,19 @@
     "    x_FOV = Fov(x_ax)\n",
     "    y_FOV = Fov(y_ax)\n",
     "\n",
-    "    remove_nan = 1\n",
-    "\n",
     "    maj_ax = np.array([safe_convert(x) for x in object_arr[:,4]])\n",
     "    min_ax = np.array([safe_convert(x) for x in object_arr[:,5]])\n",
     "\n",
     "    mask = (maj_ax >= min_frac * x_FOV) | (min_ax >= min_frac * y_FOV)\n",
     "\n",
-    "    if remove_nan:\n",
+    "    if Remove_NaN:\n",
     "        mask = mask & ~np.isnan(maj_ax) & ~np.isnan(min_ax)\n",
     "\n",
     "    return object_arr[mask]\n",
     "\n",
-    "data_FOV = ratio(data_arr_2)\n",
+    "data_FOV = ratio(data_arr_2, 0.08)\n",
     "\n",
-    "def Ratio(object_row):\n",
+    "def Ratio(object_row: np.ndarray):\n",
     "    \"\"\"\n",
     "    This function calculates the percentage the objects diagonal takes in relation to the diagonal of the FOV.\n",
     "\n",
@@ -613,7 +646,9 @@
     "    \"\"\"\n",
     "    FOV = Fov(Dia)\n",
     "    Diagonal = np.sqrt(float(object_row[4])**2+float(object_row[5])**2)\n",
-    "    return Diagonal/FOV"
+    "    return Diagonal/FOV\n",
+    "\n",
+    "TelescopeData()"
    ]
   },
   {
@@ -624,7 +659,7 @@
    "source": [
     "# Altitude maximal if ra_deg = ERA + Lambda\n",
     "\n",
-    "def min_zenith_distance(dec_deg):\n",
+    "def min_zenith_distance(dec_deg: float):\n",
     "    dec = deg_to_rad(dec_deg)\n",
     "    phi = deg_to_rad(Lat)\n",
     "    H_ex_1 = np.arcsin(np.cos(phi-dec))\n",
@@ -638,25 +673,23 @@
     "        z = zenith_distance(H_EX_2)\n",
     "    return z\n",
     "\n",
-    "min_zen_dis = []\n",
+    "def min_zenith_filter(data_FOV, baseline: float = 40):\n",
+    "    min_zen_dis = []\n",
     "\n",
-    "for n in range(len(data_FOV[:,1])):\n",
-    "    z = min_zenith_distance(data_FOV[n,2].astype(float))\n",
-    "    min_zen_dis.append(z)\n",
-    "Z_s = np.array(min_zen_dis)\n",
+    "    for n in range(len(data_FOV[:,1])):\n",
+    "        z = min_zenith_distance(float(data_FOV[n,2]))\n",
+    "        min_zen_dis.append(z)\n",
+    "    Z_s = np.array(min_zen_dis)\n",
     "\n",
+    "    indices_to_del = []\n",
     "\n",
-    "# deleting all Objects which never reach the baseline \n",
-    "baseline = 40\n",
+    "    for n in range(len(Z_s)):\n",
+    "        if float(Z_s[n].item()) >baseline:\n",
+    "            indices_to_del.append(n)\n",
     "\n",
-    "indices_to_del = []\n",
+    "    return np.delete(data_FOV, indices_to_del, 0)\n",
     "\n",
-    "for n in range(len(Z_s)):\n",
-    "    if float(Z_s[n].item()) >baseline:\n",
-    "        indices_to_del.append(n)\n",
-    "Z_g = np.delete(Z_s,indices_to_del,0)\n",
-    "\n",
-    "data_min_h = np.delete(data_FOV, indices_to_del,0)"
+    "data_min_h = min_zenith_filter(data_FOV, 40)"
    ]
   },
   {
@@ -674,7 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def time_over_x_filter(data: np.ndarray, Altitude_Threshold: float, Threshold_Time: float) -> np.ndarray:\n",
+    "def time_over_x_filter(data: np.ndarray, Altitude_Threshold: float = 30, Time_Threshold: float = 120) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    This function deletes all objects inside a list which are not visible for obs_time minutes over the Altitude_Threshold.\n",
     "\n",
@@ -682,7 +715,7 @@
     "    ----------\n",
     "    data : np.ndarray, 2darray of objects\n",
     "    Altitude_Threshold : float, minimum Altitude the object must be above (recommended: 30°)\n",
-    "    Threshold_Time : float, minimum duration in which the object is above Altitude_Threshold (in minutes, recommended 120)\n",
+    "    Time_Threshold : float, minimum duration in which the object is above Altitude_Threshold (in minutes, recommended 120)\n",
     "\n",
     "    Returns\n",
     "    ----------\n",
@@ -712,7 +745,7 @@
     "    more_del=[]\n",
     "\n",
     "    for n in range(len(data[:,0])):\n",
-    "        if np.sum((Az_Alt(Time_Night_T,data[n,1].astype(float),data[n,2].astype(float)))[1] > Altitude_Threshold) >=Threshold_Time:\n",
+    "        if np.sum((Az_Alt(Time_Night_T,float(data[n,1]), float(data[n, 2])))[1] > Altitude_Threshold) >=Time_Threshold:\n",
     "            keep.append(n) \n",
     "        else: \n",
     "            more_del.append(n)\n",
@@ -736,7 +769,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def time_over_x(data, m):\n",
+    "def time_over_x(data, Altitude_Threshold: float = 30):\n",
     "    \n",
     "    location = EarthLocation.from_geodetic(lon= Lon* u.deg, lat = Lat* u.deg, height = ele*u.m)\n",
     "    observer = Observer(location=location, timezone=timezone)\n",
@@ -759,7 +792,7 @@
     "    Time_Night_T = Time_Night + T\n",
     "    data_m = []\n",
     "    for n in range(len(data[:,0])):\n",
-    "        N = np.sum((Az_Alt(Time_Night_T, data[n, 1].astype(float), data[n, 2].astype(float)))[1] > m)\n",
+    "        N = np.sum((Az_Alt(Time_Night_T, float(data[n, 1]), float(data[n, 2])))[1] > Altitude_Threshold)\n",
     "        data_m.append(N) \n",
     "\n",
     "    data_m_arr = np.array(data_m, dtype = float)\n",
@@ -775,14 +808,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def AdvancedViewer(k: int):\n",
+    "def Final_Best(objects: np.ndarray, min_frac: float = 0.08, Altitude_Threshold: float = 30, Time_Threshold: float = 120, Only_Galaxies: bool = 0, Remove_NaN: bool = 1):\n",
+    "    if Only_Galaxies == 1:\n",
+    "        objects_filtered = Galaxies(objects)[0]\n",
+    "    else:\n",
+    "        objects_filtered = objects\n",
+    "    objects_filtered = Surface_Brightness(objects_filtered)\n",
+    "    objects_filtered = ratio(objects_filtered, min_frac, Remove_NaN)\n",
+    "    objects_filtered = min_zenith_filter(objects_filtered, 40)\n",
+    "    objects_filtered = time_over_x_filter(objects_filtered, Altitude_Threshold, Time_Threshold)\n",
+    "    objects_filtered = time_over_x(objects_filtered, Altitude_Threshold)\n",
+    "    objects_filtered = np.array(sorted(objects_filtered, key=lambda x: ( float(x[-1]), float(x[4])), reverse=True),dtype = object)\n",
+    "    return objects_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def AdvancedViewer(k: int = 10, Altitude_Reference: float = 30):\n",
     "    \"\"\"\n",
     "    This functions prints plots three diagrams for each object: 1. a time-altitude diagram, 2. a time-azimuth and 3. size in FOV. The ratio of the diagonals (object:FOV) is displayed in percent.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    k : no. of objects being plotted \n",
-    "    \n",
+    "    k : no. of objects being plotted\n",
+    "    Altitude_Reference : float, Reference at an definable altitude    \n",
     "    \"\"\"\n",
     "    location = EarthLocation.from_geodetic(lon= Lon* u.deg, lat = Lat* u.deg, height = ele*u.m)\n",
     "    observer = Observer(location=location, timezone=timezone)\n",
@@ -815,7 +868,24 @@
     "\n",
     "    time_data = [dt.replace(tzinfo=None) for dt in time_data_wtz]\n",
     "\n",
+    "    x_FOV = Fov(x_ax)\n",
+    "    y_FOV = Fov(y_ax)\n",
+    "\n",
     "    k = min(k, len(final_best[:, 0]))\n",
+    "\n",
+    "    # Extract only the last column (Surface Brightness) as a separate array\n",
+    "    surface_brightness_column = np.array(Surface_Brightness(final_best))[:, -1]  # Last column\n",
+    "\n",
+    "    # Convert Surface Brightness values to float, replacing None/NaN\n",
+    "    surface_brightness_values = np.array([float(sb) if sb not in [None, \"--\"] else np.nan for sb in surface_brightness_column])\n",
+    "    valid_sb_values = surface_brightness_values[~np.isnan(surface_brightness_values)]\n",
+    "\n",
+    "    # Set min/max for normalization (avoid empty array error)\n",
+    "    if len(valid_sb_values) > 0:\n",
+    "        min_sb, max_sb = np.min(valid_sb_values), np.max(valid_sb_values)\n",
+    "    else:\n",
+    "        min_sb, max_sb = 0, 1  # Default values if all are NaN\n",
+    "    \n",
     "    for n in range(k):\n",
     "        H = (Az_Alt(Time_Night_T,float(final_best[n,1]),float(final_best[n,2])))[1]\n",
     "        a = (Az_Alt(Time_Night_T,float(final_best[n,1]),float(final_best[n,2])))[0]\n",
@@ -825,7 +895,7 @@
     "\n",
     "        # Plot Altitude (H) on the first axis\n",
     "        ax1.plot(time_data, H, label='Altitude')\n",
-    "        ax1.plot(time_data, np.linspace(30, 30, p), label='30° Reference')\n",
+    "        ax1.plot(time_data, np.linspace(Altitude_Reference, Altitude_Reference, p), label=f'{Altitude_Reference}° Reference')\n",
     "        ax1.set_title(f\"{final_best[n, 0]} - Altitude\")\n",
     "        ax1.set_ylabel('Altitude in °')\n",
     "        ax1.set_xlim(start_time,end_time)\n",
@@ -847,7 +917,14 @@
     "        ax2.legend()\n",
     "        ax2.grid()\n",
     "\n",
-    "        ellipse = Ellipse((0,0),width=float(final_best[n,4])/x_FOV,height=float(final_best[n,5])/y_FOV,angle = 0, alpha = 0.5)\n",
+    "        sb = surface_brightness_values[n]\n",
+    "        if sb is None or np.isnan(sb):\n",
+    "            alpha = 0.5  # Default if missing\n",
+    "        else:\n",
+    "            normalized_sb = (sb - min_sb) / (max_sb - min_sb)  # Normalize between 0 and 1\n",
+    "            alpha = 0.5 - normalized_sb * 0.5  # Scale between 0 and 0.5\n",
+    "\n",
+    "        ellipse = Ellipse((0,0), width=float(final_best[n, 4])/x_FOV, height=float(final_best[n, 5])/y_FOV, angle = 0, alpha = alpha)\n",
     "\n",
     "        ax3.add_patch(ellipse)\n",
     "        ax3.set_xlim(-0.5,0.5)\n",
@@ -861,11 +938,13 @@
     "        plt.setp(ax2.xaxis.get_majorticklabels(), rotation=45)\n",
     "\n",
     "        fig.text(0.33,0.91,f\"{np.float64(Ratio(final_best[n]))*100:.3f} %\")\n",
+    "        if final_best[n, -2] is None:\n",
+    "            fig.text(0.66,0.91,f\"\")\n",
+    "        else:\n",
+    "            fig.text(0.66,0.91,f\"{np.float64(final_best[n, -2]):.3f} mag/arcmin^2\")\n",
     "\n",
     "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "\n",
-    "AdvancedViewer(10)"
+    "        plt.show()"
    ]
   },
   {
@@ -955,16 +1034,33 @@
     "    sm.set_array([])\n",
     "    cbar = plt.colorbar(sm, ax=ax, orientation=\"vertical\", pad=0.1)\n",
     "    tick_labels_jd = np.linspace(start_jd, end_jd, num=5)\n",
+    "    tick_labels_local = [\n",
+    "        Time(jd, format='jd').to_datetime(timezone=tz).strftime(\"%H:%M:%S\")\n",
+    "        for jd in tick_labels_jd\n",
+    "    ]\n",
+    "    \n",
     "    cbar.set_ticks(tick_labels_jd)\n",
-    "    cbar.set_ticklabels([Time(jd, format='jd').datetime.strftime(\"%H:%M:%S\") for jd in tick_labels_jd])\n",
-    "    cbar.set_label(\"Time Progression (HH:MM:SS)\")\n",
+    "    cbar.set_ticklabels(tick_labels_local)\n",
+    "    cbar.set_label(\"Time Progression (Local Time)\")\n",
     "\n",
     "    # Legende mit richtigen Farben für die Punkte\n",
     "    ax.legend(handles=legend_elements, loc='upper right', fontsize=8)\n",
     "\n",
-    "    plt.show()\n",
-    "\n",
-    "PathViewer()"
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PlotBestObjects(objects: np.ndarray, min_frac: float = 0.08, Altitude_Threshold: float = 30, Time_Threshold: float = 120, Only_Galaxies: bool = 0, k: int = 10, Altitude_Reference: float = 30, Remove_NaN: bool = 1):\n",
+    "    print(\"Welcome to the function calculating and plotting the best objects for your location!\")\n",
+    "    final_best = Final_Best(objects, min_frac, Altitude_Threshold, Time_Threshold, Only_Galaxies, Remove_NaN)\n",
+    "    PathViewer()\n",
+    "    AdvancedViewer(k, Altitude_Reference)\n",
+    "    print(\"Well done, this function is now over!\")"
    ]
   },
   {
@@ -1011,7 +1107,7 @@
     "    if object_idx is not None:\n",
     "        for n in range(365):\n",
     "            Day = Zeit_start + day_arr + n\n",
-    "            H_object = (Az_Alt(Day, data_arr[object_idx, 1].astype(float), data_arr[object_idx, 2].astype(float)))[1]\n",
+    "            H_object = (Az_Alt(Day, float(data_arr[object_idx, 1]), float(data_arr[object_idx, 2])))[1]\n",
     "            max_time_loop = np.argmax(H_object)\n",
     "            max_loop = np.max(H_object)\n",
     "            max_height.append(max_loop)\n",
@@ -1239,6 +1335,30 @@
     "    plt.show()\n",
     "\n",
     "color_map(grid_wto_30, 480, 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Lat = dms_to_deg(48, 40, 54)\n",
+    "Lon = dms_to_deg(12, 0, 57)\n",
+    "ele = 450 # Elevation of the observatory in metres, standard value is the Dr. Karl Remeis Observatory in Bamberg (FAU)\n",
+    "\n",
+    "selected_date = \"2025-03-08\"\n",
+    "timezone = \"Europe/Berlin\"\n",
+    "\n",
+    "final_best = Final_Best(data_arr, Only_Galaxies=1)\n",
+    "PlotBestObjects(data_arr, k = 11, Only_Galaxies=1)"
    ]
   }
  ],
