Commented unnecessary code

--- a/Objekt_Helfer.ipynb
+++ b/Objekt_Helfer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Welcome to the AstroObjectHelperPipeline! This code is still in experimental mode! This is a short introduction to the code with all the relevant data.\n",
+      "First of all, you will need to define your observation location. To do this, please define the variables `Lon` (Longitude in degrees), `Lat` (Latitude in degrees), `ele` (elevation in metres) as well as the observations date in format `\"YYYY-MM-DD\"` and your timezone with `\"Europe/Berlin\"` (watch out! you need quotation marks due to the date and timezone being a string).\n",
+      "If you have your coordinates in any other format please us the helper functions below to transform to degrees!\n",
+      "Next call the function `TelescopeData` and input the necessary parameters of your telescope so that other functions work! If there is a typo in the variable names or\n",
+      "if you just want to experiment with the standard values, the geographic location used without input is the Dr. Remeis Observatory in Bamberg, Germany as the seat\n",
+      "of the astronomical institute of the Friedrich-Alexander University Erlangen-Nuremberg with data of Lon: 10.88846, Lat: 49.88474, ele: 282 (°, °, m).\n",
+      "\n",
+      "Now let's get to business. Below is a list of all relevant functions and a short description. We wish you a lot of fun using the code!\n",
+      "\n",
+      "dms_to_deg, deg_to_dms, hms_to_deg, H_to_hms, deg_to_rad, rad_to_deg :  These all are transformations from one angle system to another\n",
+      "Simbad_extraction : This function is called when you want to create your own list of objects with data. It conducts a query of Simbad and saves the data into a .txt file. We recommend using the provided IC, Messier and NGC text files!\n",
+      "AdvancedViewer : This function plots the altitude and the azimuth with respect to time of day or rather night. It also shows you the object in the FOV of the telescope.\n",
+      "PathViewer : This function plots the paths of the best observable objects on the night sky. The coloured paths are the TOP 5 objects.\n",
+      "TimeViewer : This function plots the best observation time and the respective maximum height of the object, both with respect to day in a year.\n",
+      "Map : This function plots a map (RA-DEC) of objects on the night sky.\n",
+      "color_map : This function plots a colormap of points (coordinates being RA-DEC), where the color indicates the number of minutes, an object with certain coordinates would be above 30° alltitide in the observation night.\n",
+      "\n",
+      "Now you are set to start, don't forget to write the variables and then enjoy!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "WelcomeMessage = \"\"\"\n",
     "Welcome to the AstroObjectHelperPipeline! This code is still in experimental mode! This is a short introduction to the code with all the relevant data.\n",
@@ -84,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +657,7 @@
     "\n",
     "    return object_arr[mask]\n",
     "\n",
-    "data_FOV = ratio(data_arr_2, 0.08)\n",
+    "# data_FOV = ratio(data_arr_2, 0.08)\n",
     "\n",
     "def Ratio(object_row: np.ndarray):\n",
     "    \"\"\"\n",
@@ -653,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +716,7 @@
     "\n",
     "    return np.delete(data_FOV, indices_to_del, 0)\n",
     "\n",
-    "data_min_h = min_zenith_filter(data_FOV, 40)"
+    "# data_min_h = min_zenith_filter(data_FOV, 40)"
    ]
   },
   {
@@ -705,7 +732,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_min_h' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 46\u001b[0m\n\u001b[0;32m     42\u001b[0m             more_del\u001b[38;5;241m.\u001b[39mappend(n)\n\u001b[0;32m     44\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mdelete(data,more_del,\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m---> 46\u001b[0m data_fin \u001b[38;5;241m=\u001b[39m time_over_x_filter(\u001b[43mdata_min_h\u001b[49m, \u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m120\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data_min_h' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def time_over_x_filter(data: np.ndarray, Altitude_Threshold: float = 30, Time_Threshold: float = 120) -> np.ndarray:\n",
     "    \"\"\"\n",
@@ -752,7 +791,7 @@
     "\n",
     "    return np.delete(data,more_del,0)\n",
     "\n",
-    "data_fin = time_over_x_filter(data_min_h, 30, 120)"
+    "# data_fin = time_over_x_filter(data_min_h, 30, 120)"
    ]
   },
   {
@@ -798,8 +837,8 @@
     "    data_m_arr = np.array(data_m, dtype = float)\n",
     "    return np.append(data, data_m_arr[:, None], axis=1)\n",
     "\n",
-    "sorted_data_30 = time_over_x(data_fin, 30)\n",
-    "final_best = np.array(sorted(sorted_data_30, key=lambda x: ( float(x[-1]), float(x[4])), reverse=True),dtype = object)"
+    "# sorted_data_30 = time_over_x(data_fin, 30)\n",
+    "# final_best = np.array(sorted(sorted_data_30, key=lambda x: ( float(x[-1]), float(x[4])), reverse=True),dtype = object)"
    ]
   },
   {
@@ -1216,10 +1255,10 @@
     "\n",
     "    plt.show\n",
     "\n",
-    "gal = Galaxies(data_arr)[0]\n",
-    "no_gal = Galaxies(data_arr)[1]\n",
+    "# gal = Galaxies(data_arr)[0]\n",
+    "# no_gal = Galaxies(data_arr)[1]\n",
     "\n",
-    "mapping(final_best)"
+    "# mapping(final_best)"
    ]
   },
   {
@@ -1266,9 +1305,9 @@
     "    new_array = np.hstack((ones_column, array))  # Prepend ones column\n",
     "    return new_array\n",
     "\n",
-    "grid_points_one = add_column_of_ones(grid_points)\n",
+    "# grid_points_one = add_column_of_ones(grid_points)\n",
     "\n",
-    "grid_wto_30 = time_over_x(grid_points_one, 30)"
+    "# grid_wto_30 = time_over_x(grid_points_one, 30)"
    ]
   },
   {
@@ -1334,7 +1373,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "color_map(grid_wto_30, 480, 1000)"
+    "# color_map(grid_wto_30, 480, 1000)"
    ]
   },
   {
@@ -1352,7 +1391,7 @@
    "source": [
     "Lat = dms_to_deg(48, 40, 54)\n",
     "Lon = dms_to_deg(12, 0, 57)\n",
-    "ele = 450 # Elevation of the observatory in metres, standard value is the Dr. Karl Remeis Observatory in Bamberg (FAU)\n",
+    "ele = 450\n",
     "\n",
     "selected_date = \"2025-03-08\"\n",
     "timezone = \"Europe/Berlin\"\n",
